# stardew_valley

./: Dockerfile  README.md  Stardew_Valley_webscrapping.ipynb  main.py  pyproject.toml  requirements.txt
docs/: sopa_Calçados.html  sopa_Carteira.html  sopa_Casa.html  sopa_Chapéus.html  sopa_Coleta.html  sopa_Combate.html  sopa_Conquistas.html  sopa_Culinária.html  sopa_Cultivo.html  sopa_Estufa.html  sopa_Ferramentas.html  sopa_Ferreiro.html  sopa_Guilda_dos_Aventureiros.html  sopa_Inverno.html  sopa_Isca.html  sopa_Mercado_Joja.html  sopa_Mineração.html  sopa_Mobília.html  sopa_Modificações.html  sopa_Monstros.html  sopa_Museu.html  sopa_Papel_de_Parede.html  sopa_Primavera.html  sopa_Recados_Secretos.html  sopa_Verão.html  sopa_Vila_Pelicanos.html  sopa_Árvores_frutíferas.html
docs_bronze/: aneis.csv  animais_avestruz.csv  animais_cabra.csv  animais_coelho.csv  animais_dinossauro.csv  animais_galinha.csv  animais_ovelha.csv  animais_pato.csv  animais_porco.csv  animais_vaca.csv  armas_adagas.csv  armas_clavas.csv  armas_espadas.csv  armas_estilingues.csv  armas_impossiveis.csv  armas_luta_atributos.csv  armas_municoes.csv  artefatos.csv  artefatos_tesouro.csv  artesanato_aneis.csv  artesanato_aspersores.csv  artesanato_bombas.csv  artesanato_cercas.csv  artesanato_decoracao.csv  artesanato_diversos.csv  artesanato_equipamento_refino.csv  artesanato_equipamentos_artesanais.csv  artesanato_fertilizantes.csv  artesanato_iluminacao.csv  artesanato_itens_comestiveis.csv  artesanato_mobilia.csv  artesanato_pesca.csv  artesanato_sementes.csv  arvores_bananeira.csv  (+242 more)
(+152 files in other folders)
